syntax = "proto3";

package com.lightbend.killrweather;

message WeatherRecord {
    int64 wsid = 1;
    int32 year = 2;
    int32 month =3;
    int32 day = 4;
    int32 hour = 5;
    int64 ts = 6;
    double temperature = 7;
    double dewpoint = 8;
    double pressure = 9;
    int32 windDirection = 10;
    double windSpeed = 11;
    int32 skyCondition = 12;
    string skyConditionText = 13;
    double oneHourPrecip = 14;
    double sixHourPrecip = 15;
}

message TemperatureDailyRecord{
    int64 wsid = 1;
    int32 year = 2;
    int32 month =3;
    int32 day = 4;
    int64 ts = 6;
    double temperature = 7;
}